# hyper_cc

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  LICENSE
cmake/: CompilerWarnings.cmake  PreventInSourceBuilds.cmake  StandardProjectSettings.cmake  Utils.cmake
hcc/: CMakeLists.txt
hcc/src/: main.c
hcc_core/: CMakeLists.txt
hcc_core/include/hcc/: prerequisites.h  result.h  vector.h
hcc_core/src/hcc/: result.c  vector.c
hcc_lexer/: CMakeLists.txt
hcc_lexer/include/hcc/: lexer.h  token.h
hcc_lexer/src/hcc/: lexer.c  token.c
src/: main.c
tests/: CMakeLists.txt
tests/src/: lexer.cpp
